// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call onSelect when suggestion is click 1`] = `
<div>
  <div
    class="autocomplete  mko_ydt0iq-autocomplete"
  >
    <div
      class="clearable-input has-float-label  mko_18z22vm-clearableInput  mko_1aosyyv-controlContainer"
    >
      <div
        class="clearable-input__inner  mko_18z22vm-clearableInput__inner"
      >
        <input
          autocomplete="off"
          class="input clearable-input__input  mko_18z22vm-clearableInput__input  mko_18z22vm-clearableInput__input_clearable"
          id="jest"
          name="text"
          placeholder=" "
          title="testInput"
          type="text"
          value="at"
        />
        <label
          for="jest"
        />
        <button
          aria-label="Clear input"
          class="button ripple button--icon button--small  mko_c5ujei-button  mko_c5ujei-button_icon  mko_c5ujei-button_small clearable-input__clear  mko_18z22vm-clearableInput__clear"
          icon="❌︎"
          type="button"
        />
      </div>
    </div>
    <ul
      class="autocomplete__menu  mko_ydt0iq-autocomplete__menu"
    >
      <li
        class="autocomplete-suggestion autocomplete-suggestion--active  mko_ydt0iq-suggestion"
      >
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard autocomplete-suggestion__button"
          title="Bat"
          type="button"
        >
          <span
            class="autocomplete-suggestion__text  mko_ydt0iq-suggestion__text"
          >
            B
            <span
              class="autocomplete-suggestion-highlight  mko_ydt0iq-suggestionHighlight"
            >
              at
            </span>
          </span>
        </button>
      </li>
      <li
        class="autocomplete-suggestion  mko_ydt0iq-suggestion"
      >
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard autocomplete-suggestion__button"
          title="Cat"
          type="button"
        >
          <span
            class="autocomplete-suggestion__text  mko_ydt0iq-suggestion__text"
          >
            C
            <span
              class="autocomplete-suggestion-highlight  mko_ydt0iq-suggestionHighlight"
            >
              at
            </span>
          </span>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render filtered items when filter updated 1`] = `
<div>
  <div
    class="autocomplete  mko_ydt0iq-autocomplete"
  >
    <div
      class="clearable-input has-float-label  mko_18z22vm-clearableInput  mko_1aosyyv-controlContainer"
    >
      <div
        class="clearable-input__inner  mko_18z22vm-clearableInput__inner"
      >
        <input
          autocomplete="off"
          class="input clearable-input__input  mko_18z22vm-clearableInput__input  mko_18z22vm-clearableInput__input_clearable"
          id="jest"
          name="text"
          placeholder=" "
          title="testInput"
          type="text"
          value=""
        />
        <label
          for="jest"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render filtered items when filter updated 2`] = `
<div>
  <div
    class="autocomplete  mko_ydt0iq-autocomplete"
  >
    <div
      class="clearable-input has-float-label  mko_18z22vm-clearableInput  mko_1aosyyv-controlContainer"
    >
      <div
        class="clearable-input__inner  mko_18z22vm-clearableInput__inner"
      >
        <input
          autocomplete="off"
          class="input clearable-input__input  mko_18z22vm-clearableInput__input  mko_18z22vm-clearableInput__input_clearable"
          id="jest"
          name="text"
          placeholder=" "
          title="testInput"
          type="text"
          value="at"
        />
        <label
          for="jest"
        />
        <button
          aria-label="Clear input"
          class="button ripple button--icon button--small  mko_c5ujei-button  mko_c5ujei-button_icon  mko_c5ujei-button_small clearable-input__clear  mko_18z22vm-clearableInput__clear"
          icon="❌︎"
          type="button"
        />
      </div>
    </div>
    <ul
      class="autocomplete__menu  mko_ydt0iq-autocomplete__menu"
    >
      <li
        class="autocomplete-suggestion autocomplete-suggestion--active  mko_ydt0iq-suggestion"
      >
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard autocomplete-suggestion__button"
          title="Bat"
          type="button"
        >
          <span
            class="autocomplete-suggestion__text  mko_ydt0iq-suggestion__text"
          >
            B
            <span
              class="autocomplete-suggestion-highlight  mko_ydt0iq-suggestionHighlight"
            >
              at
            </span>
          </span>
        </button>
      </li>
      <li
        class="autocomplete-suggestion  mko_ydt0iq-suggestion"
      >
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard autocomplete-suggestion__button"
          title="Cat"
          type="button"
        >
          <span
            class="autocomplete-suggestion__text  mko_ydt0iq-suggestion__text"
          >
            C
            <span
              class="autocomplete-suggestion-highlight  mko_ydt0iq-suggestionHighlight"
            >
              at
            </span>
          </span>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render with minimum props 1`] = `
<div>
  <div
    class="autocomplete  mko_ydt0iq-autocomplete"
  >
    <div
      class="clearable-input has-float-label  mko_18z22vm-clearableInput  mko_1aosyyv-controlContainer"
    >
      <div
        class="clearable-input__inner  mko_18z22vm-clearableInput__inner"
      >
        <input
          autocomplete="off"
          class="input clearable-input__input  mko_18z22vm-clearableInput__input  mko_18z22vm-clearableInput__input_clearable"
          id="jest"
          name="text"
          placeholder=" "
          type="text"
          value=""
        />
        <label
          for="jest"
        />
      </div>
    </div>
  </div>
</div>
`;
